更新专有名次解释

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1717,6 +1717,14 @@ $例题：$
 
 ### 记忆内容
 
+- **系统调用**的目的？
+
+  > 直接目的是**请求系统服务**，在该过程中还会间接**申请系统资源**
+  >
+  > <div>
+  >   <img src="./408冲刺背诵手册.assets/image-20230305150807073.png" alt="image-20230305150807073" style="width:90%;" />
+  > </div>
+
 - **特权指令/广义指令：**用户态下**调用**，核心态下**执行**
 
 - **常见特权指令**
@@ -1804,6 +1812,16 @@ $修改时钟内容，核心态下运行$
 ③ 执行相应服务程序
 
 ④ 返回用户态
+
+### 补充内容：
+
+- OS与用户通信接口通常包含哪些？
+
+  > shell
+  >
+  > 命令解释器
+  >
+  > 广义指令
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -5018,6 +5036,10 @@ void MergSort(int A[], int B[], int L, int R) {
 
 ## CO
 
+**机器字长：**
+
+> 一台计算机所能够**同时处理**的二进制数据的**位数**
+
 **基准程序：**
 
 > 专门用户评估性能的一组程序
@@ -5084,6 +5106,14 @@ void MergSort(int A[], int B[], int L, int R) {
 
 
 ## OS
+
+**并行 & 并发**
+
+> 
+
+**命令接口**
+
+> 
 
 **记录成组分解技术：**
 
