更新名词解释

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -961,7 +961,7 @@ $效率=红色面积/蓝色面积$
 
 ### 各种周期的基本概念
 
-- **机器周期/节拍：**CPU操作的最基本单位
+- **时钟周期/节拍：**CPU操作的最基本单位
 - **机器周期：**指令周期中<u>某个阶段</u>所花费的时间
 
 - **指令周期：**从主存中**<u>取出并执行</u>**一条指令的时间
