更新定点数乘法内容

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -169,7 +169,7 @@ $$
 
 
 
-### 运算部件
+### 定点数的运算及运算部件
 
 #### 补码加减运算部件
 
@@ -201,11 +201,11 @@ C_i=G_i+P_iC_{i-1}
 $$
 
 
-#### 无符号乘法部件
+#### 无符号乘法
 
 <img src="./408冲刺背诵手册.assets/image-20221009195753769.png" alt="image-20221009195753769" style="width:40%;" />
 
-$符号位与数值位分开运算，符号位由一个异或门产生$
+$符号位与数值位分开运算，符号位由一个异或门产生（两个操作数取绝对值进行运算）$
 
 $C_n计数器表示需要循环的次数，有几位数据进行运算，C_n的初始值就为多少，每右移一次，C_n-1$
 
@@ -220,13 +220,15 @@ $运算逻辑：$
 | $Y末位=1$ | $(P)+X，逻辑右移$ |
 | $Y末位=0$ | $逻辑右移$        |
 
+> - 之所以需要C来存储进位信息，是因为P与X相加是有可能产生进位的，需要将进位信息一同右移至P中
+>
+> - 共进行N次右移操作（因为数据总共只有N位）
 
-
-#### 补码一位乘法部件
+#### 补码一位乘法（Booth）
 
 <img src="./408冲刺背诵手册.assets/image-20221220185042400.png" alt="image-20221220185042400" style="width:40%;" />
 
-$符号位和数值位一起参与运算，无专门进位位$
+**$符号位和数值位一起参与运算，无专门进位位$**
 
 $Y右边的一小格子为辅助位，初始值=0$
 
@@ -239,6 +241,9 @@ $运算逻辑：$
 | $Y-辅助位=1$  | $(P)+[x]_补，算术右移$                      |
 | $Y-辅助位=0$  | $直接算术右移$                              |
 | $Y-辅助位=-1$ | $(P)+[-x]_补(控制逻辑发出减指令)，算术右移$ |
+
+> - N位数据（不含符号位）最进行N+1次加法运算，N次右移（**<u>最后一次运算仅做加法，不右移</u>**）
+> - 乘积为2N+1位（**那1位是符号位**）
 
 #### 阵列乘法器【补充】
 
@@ -343,7 +348,7 @@ $负浮点数：1.1xx……$
 
 - **乘法**
 
-  $无符号乘法:高n位全为0/1不溢出，否则溢出$
+  $无符号乘法:高n位全为0不溢出，否则溢出$
 
   $有符号乘法：高n+1位全为0/1不溢出，否则溢出$
 
