新增名词解释：并发、并行

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -5172,11 +5172,14 @@ void MergSort(int A[], int B[], int L, int R) {
 
 **并行 & 并发**
 
-> 
+> **并行：**一个处理器**<u>在同一时刻</u>**处理多个任务。
+>
+> **并发：**一个处理器**<u>在同一时间间隔内</u>**处理多个任务。
 
 **命令接口**
 
-> 
+> - 联机命令接口=**交互式命令接口**
+> - 脱机命令接口=**批处理命令接口**
 
 **记录成组分解技术：**
 
