分组交换的两种实现方式

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -2925,7 +2925,12 @@ $总传播时延=(k+1)T_传$
   > - **建立**虚电路时，需要路由选择
   > - 根据虚电路号（VCID）进行转发
 
-  
+
+- **关于”以太网“的物理层特性**
+
+  > **曼彻斯特编码：** **每个比特需要2个信号周期**（2个Baud）来表示，相当于**每个Baud携带0.5bit信息**
+
+
 
 ### 各种特性
 
@@ -2958,17 +2963,54 @@ $注意：若一个码元携带n比特信息，则MBaud码元传输速率为:M*n
 
 <img src="./408冲刺背诵手册.assets/image-20221013193541814.png" alt="image-20221013193541814" style="width:40%;" />
 
-### 数据报服务与虚电路服务【网络层】
+### 数据交换方式（特点）
+
+#### 电路交换
+
+- 独占线路
+- 传播时延最小，实时性强 （*适用于实时性要求较高的场景*）
+- **不纠错**
+- **一个结点挂了，整条线路就废了**
+
+#### 报文交换
+
+- 将数据切分为报文
+- 报文大小无限制（因此传输时延**不固定**）
+- 要求通信节点有一定的交换空间
+
+#### 分组交换
+
+- 将报文切分为**分组**
+- 分组大小有上限（传输时延相对稳定）
+- **线路利用率高**
+- 需要额外的信息开销
+
+#### 分组交换的两种实现方式：
+
+**数据报服务：**
+
+- 无需建立连接
+- 每个分组独立进行路由选择与转发（因此每个分组都要包含**完整的发送端、接收端地址**）
+- 不保证数据可靠性（可靠性由主机负责）
+- **数据不一定有序**
+- **结点发生故障：立刻寻址切换新结点**（*适用于故障率较高的网络*）
+
+**虚电路服务：**
+
+- 通信三阶段：1、虚电路建立  2、数据传输  3、虚电路释放
+- 仅在建立电路阶段时候用**目的地址**（后续使用**虚电路号**）
+- **保证分组有序到达**
+- **结点发生故障：重新建立一条新的虚电路**（时间开销还是挺大的，所以**不适用**于故障率高的网络）
 
 <img src="./408冲刺背诵手册.assets/image-20221013193710255.png" alt="image-20221013193710255" style="width:70%;" />
 
 ### 传输介质
 
-- 同轴电缆
+**同轴电缆**
 
-  50Ω同轴电缆：基带**数字**信号
+- 50Ω同轴电缆：基带**数字**信号
 
-  75Ω同轴电缆：宽带**模拟**信号（有线电视）
+- 75Ω同轴电缆：宽带**模拟**信号（有线电视）
 
 ### 物理层设备
 
@@ -5247,3 +5289,10 @@ void MergSort(int A[], int B[], int L, int R) {
 
 **调制速率：**= 码元传输的速率
 
+**理想低通信道**：
+
+> 就是信号的所有低频分量，只要其频率不超过某个上限值，都能够不失真地通过此信道。
+>
+> 而频率超过该上限值的所有高频分量都不能通过该信道。**"理想低通"**$\approx$**"无噪声"**
+
+1
