新增不同基数对浮点数的影响

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -300,7 +300,7 @@ $负浮点数：1.1xx……$
 
 - **不同基数浮点数的规格化判断**
 
-当浮点数的基数为N时，（用原码表示）小数点后$log_2N$位**不全为0**的浮点数表示**正确规格化**
+  当浮点数的基数为N时，（用原码表示）小数点后$log_2N$位**不全为0**的浮点数表示**正确规格化**
 
 （用补码表示同理）
 
@@ -314,6 +314,24 @@ $负浮点数：1.1xx……$
 > C 1.011011  //C的小数点后两位中存在不为0的数
 > D 0.000010
 > ```
+
+- **不同基数对浮点数的影响**
+
+通常浮点数被表示为$N=S*r^j\ (S:尾数；r:基数；j:阶码)$
+
+因此可以发现，当$S$与$j$的长度及格式相同时，**基数越大，N所能表示的范围越大**
+
+但这也会带来一个问题，当基数变大后，**尾数的的变化步长也会增大**
+
+> 例如在**以2为基数**的二进制浮点数中，阶码每增加1，尾数需要**向右位移1位**。
+>
+> 而在同样的条件下**以4为基数**的二进制浮点数中，阶码每增加1，尾数需要**向右移2位**，**<u>这也间接说明了大基数的浮点数的尾数是跳着移动的，而这些被跳过的二进制位状态都是他们无法表示的。</u>**
+>
+> 因此可以得出结论，当$S$与$j$的长度及格式相同时，**基数越大，N所能表示的精度越低。**
+
+其实也可以从另一个角度来理解：**<u>同样规格划分的浮点数，能表示的不同状态个数是一定的，表示的范围大，就说明数据的离散程度更大，说明数据的精度更低。</u>**
+
+**总结：**同等条件下，基数越大，能表示的范围越大，精度越低。
 
 ### IEEE754 浮点数
 
