--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1890,13 +1890,17 @@ $例题：$
 #### 引导流程
 
 -  激活CPU：读取BIOS中的boot程序，执行BIOS的第一条指令
+   -  CPU加电，CS:IP指向FFFF0H
+   -  执行JMP跳转到BIOS
+   -  登记BIOS中断程序入口地址
+
 -  硬件自检
 -  加载Boot Device
 -  加载MBR：MBR的作用是告诉CPU应该去**哪个主分区**寻找OS
 -  扫描硬盘分区表，加载**活动分区**
 -  加载PBR：**<u>活动分区</u>**的第一个扇区称为PBR，目的是寻找并启动该分区下的**<u>启动管理器</u>**
 -  加载**启动管理器**：启动管理器就是活动分区中负责引导整个OS启动的程序
-- 加载OS
+-  加载OS
 
 ### 程序运行的内存映像
 
@@ -2000,6 +2004,8 @@ $修改时钟内容，核心态下运行$
   > $解析：$
   >
   > 进程失去封闭性也就意味着，进程的执行结果受外界因素的影响。 选D
+
+- **多线程模型：** UTL：KTL
 
 - **UNIX属于什么操作系统？**
 
@@ -3187,39 +3193,6 @@ $注意：若一个码元携带n比特信息，则MBaud码元传输速率为:M*n
 
 - 交换机泛洪发送：除**发出端口**外的**所有端口**
 
-- **划分子网的好处？**
-
-  >  减小**广播域**的大小
-
-
-- **IP数据报可以在哪些地方分片？**
-
-  > 路由器分片，目的主机重组
-
-- **NAT端口转发、丢弃规则？**
-
-  > 如果表中**找不到，直接丢弃**
-  >
-  > NAT转换表由管理员**手工添加**
-
-- **AS分区的好处？**
-
-  >  使得**洪泛**交换信息的**范围缩小**，每次洪泛不需要对整个AS洪泛
-
-- **BGP交换的内容？**
-
-  >按时间划分：
-  >
-  >**首次**交换整个路由表，随后每次更新**有变化的部分**
-  >
-  >可达信息：到达某个网络所经过的**路径**
-
-- **各种互连/互联问题集合**
-
-  > - 路由器互联：下三层**可不同**
-  > - 异构网络：下两层**可不同**
-  > - 网段互联：本层和下层相同
-  > - 集线器两端互联：全一样
 
 - **对正确收到的帧进行确认的MAC协议是？**
 
@@ -3659,6 +3632,40 @@ $例题：$
 ## U4 网络层
 
 ### 记忆内容
+
+- **划分子网的好处？**
+
+  >  减小**广播域**的大小
+
+
+- **IP数据报可以在哪些地方分片？**
+
+  > 路由器分片，目的主机重组
+
+- **NAT端口转发、丢弃规则？**
+
+  > 如果表中**找不到，直接丢弃**
+  >
+  > NAT转换表由管理员**手工添加**
+
+- **AS分区的好处？**
+
+  >  使得**洪泛**交换信息的**范围缩小**，每次洪泛不需要对整个AS洪泛
+
+- **BGP交换的内容？**
+
+  >按时间划分：
+  >
+  >**首次**交换整个路由表，随后每次更新**有变化的部分**
+  >
+  >可达信息：到达某个网络所经过的**路径**
+
+- **各种互连/互联问题集合**
+
+  > - 路由器互联：下三层**可不同**
+  > - 异构网络：下两层**可不同**
+  > - 网段互联：本层和下层相同
+  > - 集线器两端互联：全一样
 
 - $网络层只向上提供：简单灵活的无连接、尽最大努力交付的数据报服务！！$
 
@@ -4277,9 +4284,35 @@ $具有n个(n\ge1)结点的完全二叉树高度为 \lceil\log_2(n+1)\rceil 或 
 
   $i是否为分支结点:i>\lfloor n/2 \rfloor$
 
-### 哈夫曼树的应用
+### 线索二叉树（待更新）
 
-#### 判定两个
+#### 结点结构：
+
+<div>
+  <img src="./408冲刺背诵手册.assets/image-20230421154807232.png" alt="image-20230421154807232" style="width:60%;" />
+</div>
+
+**(l/r)tag标志域：**
+
+- 0：（左/右）孩子
+- 1：（前/后）驱
+
+#### 线索二叉树的遍历
+
+|          | 中序线索二叉树 | 先序线索二叉树 | 后序线索二叉树 |
+| -------- | :------------: | :------------: | :------------: |
+| 寻找前驱 |       ✅        |       ❌        |       ✅        |
+| 寻找后驱 |       ✅        |       ✅        |       ❌        |
+
+> 口诀：中序万能，先序不找前，后序不找后
+
+**先序环路问题的解决方法：**利用tag位判断是否存在左子树
+
+
+
+### 哈夫曼树的应用（待更新）
+
+#### 
 
 ### BST二叉搜索树
 
@@ -5493,6 +5526,10 @@ void MergSort(int A[], int B[], int L, int R) {
 > 对等层次之间传送的数据单位
 
 **SAP（Service Access Point）:**服务访问点
+
+**ARQ（Automatic Repeat re Quest）：**
+
+> 数据链路层中一种处理帧错误的方法，具体处理方式为：将错误的帧重传
 
 **分波器&合波器：**
 
