--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -980,13 +980,13 @@ $解答：$
 
 #### 从功能角度分类：
 
-| 运算器           | 控制器   | 数据通路             |
-| ---------------- | -------- | -------------------- |
-| ALU              | PC       | 内部通路（内部总线） |
-| ACC              | PSW      | 专用通路             |
-| SR移位器、暂存器 | MDR、MAR |                      |
-| Rx、SP           | ID、IR   |                      |
-| CT计数器         | 时序系统 |                      |
+| 运算器               | 控制器   | 数据通路             |
+| -------------------- | -------- | -------------------- |
+| ALU                  | PC       | 内部通路（内部总线） |
+| ACC                  | PSW      | 专用通路             |
+| SR移位器、T暂存器    | MDR、MAR |                      |
+| Rx、SP堆栈指针寄存器 | ID、IR   |                      |
+| CT计数器             | 时序系统 |                      |
 
 #### 从用户可见角度分类：
 
@@ -2628,6 +2628,8 @@ Writer(){
 - **首轮：**找<u>访问位=0</u>的，并置0
 - **后续：**同首轮
 
+> 注：当前指针指向的页面在第一轮也会去找
+
 #### 改进型CLOCK
 
 在简单CLOCK的基础上增加为**<访问，修改>**（先访问再修改）
@@ -2719,6 +2721,55 @@ Writer(){
 - **read(文件描述符fd，缓冲区首址buf，读取字节数)**
 
 <img src="./408冲刺背诵手册.assets/image-20221022203008455.png" alt="image-20221022203008455" style="width:80%;" />
+
+### FAT文件分配表
+
+FAT（File Allocation Table），是一种在“链式分配盘块”方式中用到的一种数据结构，它的本质类似于一个静态链表，数据结构由 `<物理块号, 下一块>` 构成，当 “下一块” 为-1通常表示为文件占用的最后一块盘块。
+
+<img src="./408冲刺背诵手册.assets/image-20230507162142620.png" style="width:20%;" />
+
+#### FAT长度计算
+
+本质就是计算FAT表项的数量，而FAT表项的数量又由`<物理块号, 下一块>`能表示的最大范围决定，因此，核心就是知道这两个字段的位数 。
+
+> 例题：【2016 T47】
+>
+> <div>
+>   <img src="./408冲刺背诵手册.assets/image-20230507162814102.png" alt="image-20230507162814102" style="width:75%;" />
+> </div>
+>
+> 答：
+>
+> 每个表项仅存簇号这一个字段，因此只需计算簇号的位数就知道能表示的最大范围
+>
+> 故FAT文件最大长度 = $最大能表示的簇数*单个表项长度=2^{16}*2B=128KB$
+
+### 不同盘块组织方式的优缺点
+
+| 组织方式     | 优点                                             | 缺点                               |
+| ------------ | ------------------------------------------------ | ---------------------------------- |
+| **连续分配** | 随机读写速度<u>**最快**</u>，空间利用率最高      | 文件的增删改不方便                 |
+| **链接分配** | 增删改方便                                       | 不支持随机读写，且指针占用额外空间 |
+| **索引分配** | 支持随机读写（速度没连续分配快），且增删改也方便 | 索引结点占用额外空间               |
+
+> **做题技巧：**
+>
+> 若题目中提到了**“文件不可修改/无需修改”**等，这是一个强提示，通常都是可以选用连续分配方式的。
+
+### 文件数量的计算
+
+制约文件数量的因素有两个
+
+- **空闲盘块数：**空闲盘块越多，能存放的文件越多（**<u>千万注意一个文件不管多小，至少占用1个盘块</u>**）
+- **索引节点数：**一个文件对应一个索引结点
+
+所以如果告诉你文件大小让你计算最多能存的文件数，用下面的步骤：
+
+> 1. 计算出空闲盘块能存放的文件数量$n_1$
+> 2. 计算出系统索引结点数$n_2$
+> 3. 最大文件数量 = $\max\{ n_1, n_2 \}$
+
+
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -4312,7 +4363,18 @@ $具有n个(n\ge1)结点的完全二叉树高度为 \lceil\log_2(n+1)\rceil 或 
 
 ### 哈夫曼树的应用（待更新）
 
-#### 
+###并查集
+
+存储结构：树的双亲表示法
+
+#### Find()时间复杂度
+
+|            | 无优化 | Union优化                                  | 压缩路径                                                   |
+| ---------- | ------ | ------------------------------------------ | ---------------------------------------------------------- |
+| **复杂度** | $O(n)$ | $O(\log_2n)$                               | $O(\alpha(n))$                                             |
+| **原理**   |        | 在合并的时候总是将较矮的树合并到较高的树下 | 查找的时候先找到根，然后再将查找路径上的所有结点都挂到根上 |
+
+
 
 ### BST二叉搜索树
 
@@ -4686,17 +4748,6 @@ $(因为实际上失败结点是个空指针，访问空指针并不算是一次
 > $ASL_{成功}=\frac{1}{11}(1*1+2*2+4*3+3*4+1*5)=\frac{34}{11}$
 >
 > $ASL_{失败}=\frac{1}{12}[5*(4-1)+5*(5-1)+2*(6-1)]=\frac{45}{12}$
-
-### 并查集
-
-存储结构：树的双亲表示法
-
-#### Find()时间复杂度
-
-|            | 无优化 | Union优化                                  | 压缩路径                                                   |
-| ---------- | ------ | ------------------------------------------ | ---------------------------------------------------------- |
-| **复杂度** | $O(n)$ | $O(\log_2n)$                               | $O(\alpha(n))$                                             |
-| **原理**   |        | 在合并的时候总是将较矮的树合并到较高的树下 | 查找的时候先找到根，然后再将查找路径上的所有结点都挂到根上 |
 
 
 
