--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -5,7 +5,6 @@
 ### 易错点
 
 - 软件功能与硬件功能在**逻辑上**是等效的
-- 
 
 ### 记忆类
 
@@ -976,17 +975,28 @@ $解答：$
 
 ## U5 中央处理器
 
+### 记忆内容
+
+- 微程序控制器内置的2个公共微程序分别是什么？
+
+> 取指微程序、中断周期响应微程序
+
+- 
+
 ### CPU基本结构
 
 #### 从功能角度分类：
 
-| 运算器               | 控制器   | 数据通路             |
-| -------------------- | -------- | -------------------- |
-| ALU                  | PC       | 内部通路（内部总线） |
-| ACC                  | PSW      | 专用通路             |
-| SR移位器、T暂存器    | MDR、MAR |                      |
-| Rx、SP堆栈指针寄存器 | ID、IR   |                      |
-| CT计数器             | 时序系统 |                      |
+| 运算器               | 控制器                         | 数据通路             |
+| -------------------- | ------------------------------ | -------------------- |
+| ALU                  | PC                             | 内部通路（内部总线） |
+| ACC                  | 操作信号发生器(**操作控制器**) | 专用通路             |
+| SR移位器、T暂存器    | MDR、MAR                       |                      |
+| Rx、SP堆栈指针寄存器 | ID、IR                         |                      |
+| CT计数器             | 时序系统                       |                      |
+| PSW                  |                                |                      |
+
+> 控制部件：PC+MM+II+操控、时序 
 
 #### 从用户可见角度分类：
 
@@ -1117,7 +1127,9 @@ $解答：$
 | **优点** | 微程序短，执行高效 | 微指令短，易于编写   |
 | **缺点** | 微指令长，编写麻烦 | 微程序长，执行效率低 |
 
-##### 
+
+
+
 
 ### 两种制器对比
 
@@ -3758,7 +3770,9 @@ $例题：$
 >
 > $答案：B$
 
+- ICMP属于哪一层协议，封装在哪里？
 
+> 网络层，IP数据报中
 
 
 ### SDN
@@ -3798,9 +3812,10 @@ $例题：$
 - **不用作**主机的IP地址
   - **255.255.255.255** **受限广播地址**（整个TCP/IP网络的广播）
   - **0.0.0.0**表示本网络主机（只能作为**源地址**）
-  - **127**环回地址
+  - **127开头的所有都是**环回地址
   - 主机号**全1表示广播地址**
   - 主机号**全0表示网络号**
+- **多播地址范围：**224.0.0.0~239.255.255.255（只能作为目的地址）
 
 #### 变长子网划分 【重要⚠️】
 
@@ -3859,30 +3874,35 @@ $例题：$
 
 ### NAT
 
-- **私有IP网段：**
+**私有IP网段：**
 
-  | TYPE   | ADDR                  |
-  | ------ | --------------------- |
-  | TYPE A | **10**.0~             |
-  | TYPE B | 172.**16**~172.**31** |
-  | TYPE C | 192.**168**.0~        |
+| TYPE   | ADDR              |
+| ------ | ----------------- |
+| TYPE A | **10**.x.x.x      |
+| TYPE B | 172.**16~31**.x.x |
+| TYPE C | 192.**168**.x.x   |
 
-- **注意点：**
-  普通路由器**仅工作在网络层**：转发数据报时**不修改**源地址与目的地址
+**注意点：**
+普通路由器**仅工作在网络层**：转发数据报时**不修改**源地址与目的地址
 
-  带NAT功能的路由器转发时，需要查看**传输层**的端口号：**必须更换**源IP地址
+带NAT功能的路由器转发时，需要查看**传输层**的端口号：**必须更换**源IP地址
 
 ### 主要协议
 
 #### ARP
 
-- **工作流程**
+**工作流程:**
 
-  ① 先查ARP高速缓存
+① 先查ARP高速缓存
 
-  ②再发全F帧
+②再发全F帧
 
-  ③如果IP不在本网络，则交由默认网关请求ARP
+③如果IP不在本网络，则交由默认网关请求ARP
+
+**报文类型：**
+
+- ARP请求：广播
+- ARP响应：**单播**
 
 #### DHCP
 
@@ -3898,7 +3918,11 @@ $例题：$
 
 #### ICMP
 
-- **报文类型：**
+**封装细节：**
+
+- ICMP报文属于网络层应用，所以也是封装在IP数据报中的
+
+**报文类型：**
 
 ```java
 //差错报文：
@@ -3914,13 +3938,16 @@ $例题：$
     路由询问和通告报文
 ```
 
+**主要应用：**
+
+- ping：（应用层，不经过传输层，直接使用网络层服务）**回送**请求与**回答**报文
+- traceroute：（网络层）时间超过型**差错**报文
 
 
-- **主要应用**
-  - ping：（应用层，不经过传输层，直接使用网络层服务）**回送**请求与**回答**报文
-  - traceroute：（网络层）时间超过型**差错**报文
 
 #### OSPF与RIP主要区别
+
+OSPF使用Hello分组来保持与邻居的联系
 
 <img src="./408冲刺背诵手册.assets/image-20221014155826254.png" alt="image-20221014155826254" style="width:50%;" />
 
@@ -4763,7 +4790,7 @@ $(因为实际上失败结点是个空指针，访问空指针并不算是一次
 
 - 连通：两个顶点之间有路径存在，则称这两个顶点连通
 - 连通图：G中任意两个顶点都是连通的
-- 无向图中的**极大连通子图**
+- 连通分量：无向图中的**极大连通子图**
 
 <img src="./408冲刺背诵手册.assets/image-20221017195312875.png" alt="image-20221017195312875" style="width:50%;" />
 
