--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -3963,6 +3963,8 @@ OSPF使用Hello分组来保持与邻居的联系
 
   后23位一一对应
 
+  MAC的第24位必定为0
+
   <img src="./408冲刺背诵手册.assets/image-20221014160418367.png" alt="image-20221014160418367" style="width:60%;" />
 
 - **组播的路由选择协议：**
@@ -4394,7 +4396,7 @@ $具有n个(n\ge1)结点的完全二叉树高度为 \lceil\log_2(n+1)\rceil 或 
 
 ### 哈夫曼树的应用（待更新）
 
-###并查集
+### 并查集
 
 存储结构：树的双亲表示法
 
@@ -4815,13 +4817,15 @@ $无向图邻接矩阵A^m中，第i行j列元素的含义：从顶点i到j，长
 **邻接矩阵**
 
 - 邻接矩阵的表示方法唯一
-- 在绘制邻接矩阵的时候，注意顶点本身-本身的点数值是0而不是∞
-- 确定两个顶点**是否相连**很容易，但确定边的**总数**需要完整遍历
+- **牢记：**在绘制邻接矩阵的时候，注意顶点本身-本身（对角线）的点数值是0而不是∞
+- 确定两个顶点**是否相连**很容易，但确定边的**总数**需要**完整遍历**
 - $空间复杂度:O(|V|^2)$
 
 **邻接表**
 
-- 判断边的**总数**很容易，但很难确定**两点之间是否相连**
+- 判断边的**总数**很容易，但<u>很难确定</u>**两点之间是否相连**
+
+- 求**入度**须遍历整张表，求**出度**仅需遍历单个节点链
 
 - $空间复杂度$
 
@@ -4843,11 +4847,21 @@ $空间复杂：O(V)$ 需要一个辅助队列，大小与v个数有关
 
 $时间复杂：矩阵O(V^2)，表O(V+E)$
 
+$应用：求单源最短路径$
+
 **DFS**
 
 $空间复杂：O(V)$ 空间开销主要来自函数调用栈，递归深度为V
 
 $时间复杂：矩阵O(V^2)，表O(V+E)$
+
+$应用：退栈逆拓扑、判环$
+
+**补充：回路判断的方法**
+
+DFS、拓扑排序、求关键路径
+
+**拓扑排序的最低要求：**邻接矩阵为三角
 
 #### 图的应用
 
