更新名词解释：按序发射 按序完成

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -4614,7 +4614,7 @@ $口诀：左根右，根叶黑，不红红，黑路同$
   - RR：左单旋，**父换爷**+染色
   - LR：左右双旋，<u>儿换爷</u>+染色
   - RL：右左双旋，<u>儿换爷</u>+染色
-- **<u>红叔</u>：**染色+变新；叔父爷染色，爷爷变新（**<u>把爷爷当做新结点后重复②</u>**）
+- **<u>红叔</u>：**染色+变新；**叔父爷**染色，爷爷变新（**<u>把爷爷当做新结点后重复②</u>**）
 
 #### 【红黑树重要考点】
 
@@ -5021,7 +5021,7 @@ DFS、拓扑排序、求关键路径
 
 - **同义词：**发生“冲突”的不同关键字
 
-- **聚集：**
+- **聚集/堆积：**
 
 - - **同义词冲突≠聚集！！！**
 
@@ -5038,6 +5038,10 @@ DFS、拓扑排序、求关键路径
   > 解答：
   >
   > 拉链法从图片看上去虽然是把一堆同义词都堆在了一个地方，但是这个**堆放的过程**，都是一次性完成的，**<u>并没有出现重复向下查找</u>**的现象，所以并不是**“聚集”**
+
+#### ASL计算
+
+千万注意，ASL分母只和散列函数可能落到的点有关，与关键字数量无关！！！！
 
 
 
@@ -5541,6 +5545,12 @@ void MergSort(int A[], int B[], int L, int R) {
 **三态门：**
 
 > CPU内部设计中非常重要的一个**“开关”**部件，用于控制某个部件与数据通路间的**连通与断开**
+
+**按序发射，按序完成：**
+
+> 与乱序发射恰恰相反，指令必须按照事先编排好的顺序按序执行与完成，**编译器不得随意调整指令顺序。**
+>
+> 在五段式流水线中表现为：**<u>下一条指令的 IF 必须和上一条指 令的 ID 并行，以免因上一条指令发生冲突而导致下一条指令先执行完。</u>**
 
 **乱序发射：**
 
