--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1255,15 +1255,15 @@ $效率=红色面积/蓝色面积$
 
 #### 指令流&数据流
 
-**指令流**
-
-> - 单指令流：每条指令只能处理**特定的一两个**数据
-> - 多指令流：每条指令可同时处理**<u>很多个具有相同特征</u>**的数据
-
 **数据流**
 
-> - 单数据流：指令序列**只能并发**，**不能并行**
-> - 多数据流：指令序列**支持并行**
+> - 单数据流：每条指令只能处理**特定的一两个**数据
+> - 多数据流：每条指令可同时处理**<u>很多个具有相同特征</u>**的数据
+
+**指令流**
+
+> - 单指令流：指令序列**只能并发**，**不能并行**
+> - 多指令流：指令序列**支持并行**
 
 #### SISD、SIMD、MIMD基本概念
 
