--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1374,44 +1374,54 @@ $效率=红色面积/蓝色面积$
 
 - **总线同步：**
 
-	> 同步/半同步总线均是统一时钟信号
-	
+
+> 同步/半同步总线均是统一时钟信号
+
 - **如何充分利用CPU性能？**
 
-  > 采用多总线
+> 采用多总线
 
 - **总线之间必须使用桥接器连接吗？**
 
-  > 是的，因为不同总线之间的速度不同，桥接器起到的就是一个缓冲的作用
+> 是的，因为不同总线之间的速度不同，桥接器起到的就是一个缓冲的作用
+
+- **地址总线是单向的：**
+
+> 仅用于CPU向主存或IO设备传送地址用于寻址，不允许逆向传送！！
 
 ### 总线性能指标
 
 #### 对应关系：
 
-> 总线**时钟周期**<=>总线**时钟频率**
+> 总线**时钟周期** <=> 总线**时钟频率**
 >
-> 总线**传输周期**（总线周期）<=>总线**工作频率**
+> 总线**传输周期** <=> 总线**工作频率**
 
 #### 总线带宽计算：
 
 $总线带宽=宽度*总线\textbf{工作}频率$
 
-$总线工作频率=总线频率/n$
+$总线工作频率=总线时钟频率/n$
 
-$n:总线传输一次所需要的总线周期$
+$n:总线传输一次所需要的总线时钟周期$
+
+### 常见总线结构
+
+**单总线：**系统总线
+
+**双总线：**主存总线+I/O总线
+
+**三总线：**主存总线+I/O总线+DMA总线
 
 ### 总线定时
 
 #### 同步定时
 
-- 全局采用一个**统一**的时钟信号（包括半同步）
+全局采用一个**统一**的时钟信号（包括半同步）
 
-| 优点         | 缺点                                                   |
-| :----------- | :----------------------------------------------------- |
-| 传输速率高   | 属于**强制性**同步，不能有进行有效性检查，**可靠性低** |
-| 控制逻辑简单 |                                                        |
+**优点：**传输速率高、逻辑控制简单
 
-
+**缺点：**属于**强制性**同步，不能有进行有效性检查，**可靠性低**
 
 #### 异步定时
 
@@ -2732,7 +2742,7 @@ Writer(){
 
 - 先open后read
 
-- **open(文件名，路径)：return fd**
+- **open(文件名，路径)：return **
 
 - **read(文件描述符fd，缓冲区首址buf，读取字节数)**
 
