--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1417,7 +1417,11 @@ $n:总线传输一次所需要的总线时钟周期$
 
 #### 同步定时
 
-全局采用一个**统一**的时钟信号（包括半同步）
+**特点：**
+
+- 全局采用一个**统一**的时钟信号（包括半同步）
+- 总线长度通常较短
+- 各个部件存取时间比较接近
 
 **优点：**传输速率高、逻辑控制简单
 
@@ -5081,11 +5085,22 @@ DFS、拓扑排序、求关键路径
 
 #### 堆排序
 
-**建堆（“调整”操作）：**从最后一个非叶结点开始检查，将所有不满足条件的
+**建堆（“调整”操作）：**从最后一个非叶结点开始检查，将所有不满足条件的结点进行“下坠”
 
-**插入：**统一插入到堆底尾部（从存储结构看也就是列表末尾），然后执行一次“调整”操作。
+**插入：**统一插入到堆底尾部（从存储结构看也就是列表末尾），然后执行一次“调整（上升）”操作。
 
 **删除：**删除后，用堆底元素代替被删除的元素，然后逐一比较“下坠”。
+
+**时间复杂度：**
+
+- $建堆O(n)$
+- $输出并调整O(logn)$
+
+**空间复杂度：**
+
+- $O(1)$
+
+
 
 ### 比较排序
 
