添加next_val数组计算

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -317,7 +317,7 @@ $注意：除法运算器用的是左移操作，不是右移！$
 
 **注意：**题中告诉你阶码和位数的位数后，<u>**一定要留意他们还有符号位**</u>，看清楚各占多少位，是否可能最终会溢出
 
-- **规格化后的格式**（以基数2位例）
+- **规格化后的格式（原码）**（以基数2位例）
 
 $正浮点数：0.1xx……$
 
@@ -325,15 +325,21 @@ $负浮点数：1.1xx……$
 
 - **左归与右归**
 
-  $左归：尾数左移，阶码-1$
+  **左归：**尾数左移，阶码-1；**应用场景：**浮点数最高位不是有效位（小数点后第一位不是有效位）
 
-  $右归：尾数右移，阶码+1$
+  **右归：**尾数右移，阶码+1；**应用场景：**尾数的有效位跑到小数点左边时（**通常只归一次，由进位引起**）
 
-- **不同基数浮点数的规格化判断**
+- **舍入☆**
 
-  当浮点数的基数为N时，（用原码表示）小数点后$log_2N$位**不全为0**的浮点数表示**正确规格化**
+  **诱发舍入的场景：**右归、对阶（虽然对阶本质也是右归，但≠右归，他们是两个东西）
+  
+  > 本质原因：右归导致尾数右移，部分尾数被丢弃。**这个过程就叫舍入**，**<u>所以如果这部分尾数中不含有效位，本次舍入就不会产生误差</u>**
+  
+- **不同基数浮点数的规格化判断☆**
 
-（用补码表示同理）
+  当浮点数的**基数为N**时，（用原码表示）小数点后$log_2N$位**不全为0**的浮点数表示**正确规格化**
+
+（☆用**补码**则为：小数点后 $\log_2N$ 位**不全为 $k（k为符号位）$ **的浮点数表示**正确规格化** ）
 
 > eg.
 >
@@ -4322,7 +4328,7 @@ $栈空入栈，高入低弹至低入$
 
 ### KMP算法
 
-**2种next[j]数组的计算：**
+#### **2种next[j]数组的计算：**
 
 <img src="./408冲刺背诵手册.assets/image-20221028084711284.png" alt="image-20221028084711284" style="width:40%;" />
 
@@ -4367,6 +4373,40 @@ Tips：**真题好像第一种较多**（细节：匹配失败后，j=next[j], i
 > 出错前比较6次，出错回溯后比较4次，共比较10次
 >
 > B
+
+#### **next_val[j]数组的计算：**
+
+**计算步骤：**
+
+- j 从1开始
+- `next_val[1]`无脑写0
+- 若`a[j] ≠ a[next[j]]`，则让`nxet_val[j] = next[j]`
+- 若`a[j] = a[next[j]]`，则让`nxet_val[j] = next_val[next[j]]`
+- 口诀：不同则不动，相同找**“前”**next_val（这里的“前”指的是`a[next[j]]`）
+
+**代码逻辑：**
+
+```c++
+next_val[1]=0;
+for(int j = 2; j <= T.length; ++j) {
+  if(T.ch[next[j]] == T.ch[j])  // 相同找“前”next_val
+    next_val[j] = next_val[next[j]];
+  else
+    next_val[j] = next[j]; // 不同则不动
+}
+```
+
+**习题：**
+
+<div>
+  <img src="./408冲刺背诵手册.assets/image-20230807221354870.png" alt="image-20230807221354870" style="width:40%;" />
+</div>
+
+<div>
+  <img src="./408冲刺背诵手册.assets/image-20230807221134810.png" alt="image-20230807221134810" style="width:40%;" />
+</div>
+
+
 
 ## 树
 
