--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -3724,7 +3724,11 @@ $例题：$
 | 内容     |    主站传输、从站响应    |  主站传输、从站响应  | 符合站传输、符合站响应 |
 | 特点     | 从站必**须得到主站允许** | 从站**无需得到允许** |           /            |
 
+#### 帧类型
 
+- 信息帧（I）
+- 监督帧（S）
+- 无编号帧（U）
 
 <div STYLE="page-break-after : always;"></div>
 
@@ -3933,7 +3937,7 @@ $例题：$
 
 **报文类型：**
 
-- ARP请求：广播
+- ARP请求：**广播**
 - ARP响应：**单播**
 
 #### DHCP
