增加OS重定位、连续分区管理专项

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1954,7 +1954,7 @@ $例题：$
 
 ### 时钟中断【补充】
 
-$时钟中断：指的就是时间片到$
+时钟中断：指的就是时间片到
 
 -  系统每隔一段时间向CPU发送一个“时钟中断”，从而实现分时
 - 当CPU收到时钟中断信号后，转而执行“**时钟中断服务程序**”
@@ -1967,7 +1967,7 @@ $时钟中断：指的就是时间片到$
 
 #### 置时钟指令
 
-$修改时钟内容，核心态下运行$
+修改时钟内容，核心态下运行
 
 ### 中断类
 
@@ -2567,9 +2567,13 @@ Writer(){
   >
   > 共享和保护
   >
-  > 增加实际内存容量
+  > 动态链接和增长（增加实际内存容量）
 
-- 绝大多数进程的页表都是常驻内存的（不论是否运行）
+- **进程与页表的关系？**
+
+  > 每个进程都有一张页表
+  >
+  > 绝大多数进程的页表都是常驻内存的（不论是否运行）
 
 - **影响请求分页系统有效（平均）访存时间的是？**
 
@@ -2597,7 +2601,31 @@ Writer(){
   >
   > $答案：B$
 
-### 动态分区算法特点总结
+### 重定位所处过程总结☆
+
+**绝对装入：**链接、编译阶段
+
+**静态重定位（可重定位装入）：**装入阶段
+
+**动态重定位（动态装入）：**运行阶段
+
+**【补充】地址变换阶段总结：**
+
+- 形成逻辑地址：链接阶段
+- 逻辑地址->物理地址：运行阶段
+
+### 连续分区管理
+
+**单一连续分配**
+
+- 内存中永远**只有一道程序**
+- 仅适用于**单用户、单任务**OS
+
+**固定分区分配**
+
+- 一种最简单的**多道程序**管理方式
+
+**动态分区分配**
 
 | 算法     | 首次适应                      | 最佳适应                        | 最坏适应                    | 邻近适应                        |
 | -------- | ----------------------------- | ------------------------------- | --------------------------- | ------------------------------- |
