新增NC协议栈与OS内容修正

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -507,7 +507,7 @@ $负浮点数：1.1xx……$
   >
   > C肯定对
 
-### 存储器
+### 存储器☆
 
 #### SRAM与DRAM对比
 
@@ -526,8 +526,8 @@ $负浮点数：1.1xx……$
 
 **引脚包含：**
 
-- 数据线：由于采用了”地址线复用技术“，相比SRAM地址线数量减半
-- 地址线
+- 数据线
+- 地址线：由于采用了”地址线复用技术“，相比SRAM地址线数量减半
 - 读写控制线：可能为1根，可能为2根
 - 行通选线：1根
 - 列通选线：1根
@@ -619,7 +619,7 @@ $最少地址线数量=log_2max\{行数,列数\}$
 >
 > $数据线=8(DRAM芯片有几位，数据线就有几根)$
 >
-> $引脚总数=地址线+数据线=11+8=19$（其他题目没说就不用算）
+> $引脚总数=地址线+数据线=11+8=19$（其他题目没说就不用算）A
 
 
 
@@ -922,6 +922,10 @@ pop ebp				;将ebp的旧值出栈，并恢复至ebp
 <img src="./408冲刺背诵手册.assets/image-20221219165141330.png" alt="image-20221219165141330" style="width:80%;" />
 
 <img src="./408冲刺背诵手册.assets/image-20221219165304428.png" alt="image-20221219165304428" style="width:80%;" />
+
+#### 如何传递参数和返回值
+
+
 
 #### 一个栈帧可能包含的内容
 
@@ -2772,7 +2776,7 @@ Writer(){
 
 #### 软链接
 
-只有文件主能够指向真实文件的索引结点。而其他共享用户都是自己**先创建一个新的**索引结点，该索引结点**指向LINK文件**，<u>新索引结点的Count数与真实文件索引结点Count无关！！</u>。
+只有**文件主**能够指向真实文件的索引结点。而其他共享用户都是自己**先创建一个新的**索引结点，该索引结点**指向LINK文件**，<u>新索引结点的Count数与真实文件索引结点Count无关！！</u>。
 
 <img src="./408冲刺背诵手册.assets/image-20221015190721897.png" alt="image-20221015190721897" style="width:80%;" />
 
@@ -4250,6 +4254,12 @@ MIME可在现有的电子邮件协议下传送
 
 
 
+## 附录：计算机网络协议栈
+
+![NC协议汇总](./408冲刺背诵手册.assets/NC协议汇总.png)
+
+
+
 # DS冲刺背诵手册
 
 ## 线性表
@@ -4501,6 +4511,24 @@ for(int j = 2; j <= T.length; ++j) {
 >   $k_0=k,\ k_1=0,\ k_2=k-1$
 
 $具有n个(n\ge1)结点的完全二叉树高度为 \lceil\log_2(n+1)\rceil 或 \lfloor \log_2n \rfloor +1$
+
+$例题：$
+
+> 【23王道DS P133 T14】
+>
+> <div>
+>   <img src="./408冲刺背诵手册.assets/image-20230812215016925-1848225.png" alt="image-20230812215016925" style="width:60%;" />
+> </div>
+>
+> $解析：$
+>
+> 像这种告诉你是完全二叉树，且仅告诉你叶子结点数然你算总结点数的，用这个结论基本就是秒杀
+>
+> 题目问最多有多少个结点，说明 $n_1=1$，由题可知 $n_0=124$ ，则可知 $n_2=n_0-1=123$
+>
+> 故 $n=n_0+n_1+n_2=124+1+123=248$
+
+
 
 #### 二叉树的顺序存储
 
