补充CO指令内容

--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -1012,11 +1012,11 @@ $解答：$
 
 - 用户可见
 
-> PC、PSW（部分可见）、Rx、**基址**寄存器
+> PC、PSW（部分可见）、Rx、**基址**寄存器、ACC
 
 - 对用户透明
 
-> MDR、MAR、ID、IR、SR移位器、**暂存**寄存器
+> MDR、MAR、ID、IR、SR移位器、T**暂存**寄存器
 
 ### 微程序结构
 
@@ -1062,7 +1062,16 @@ $解答：$
 
 <img src="./408冲刺背诵手册.assets/image-20221126171609377.png" alt="image-20221126171609377" style="width:50%;" />
 
-### 微指令编码方式 
+### 不同周期访存的目的
+
+- **取指周期：**取指令
+- **间址周期：**取操作数**地址**（不是取操作数本身）
+- **执行周期：**取操作数
+- **中断周期：**保存程序断点
+
+<img src="./408冲刺背诵手册.assets/image-20230817220321774.png" alt="image-20230817220321774" style="width:50%;" />
+
+### 微指令编码方式
 
 #### 直接编码：
 
