--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -516,6 +516,8 @@ $负浮点数：1.1xx……$
 
 <img src="./408冲刺背诵手册.assets/image-20221014195718819.png" alt="image-20221014195718819" style="width:60%;" />
 
+功耗：SRAM大、DRAM小
+
 #### SRAM引脚结构
 
 **引脚包含：**
@@ -1133,6 +1135,8 @@ $解答：$
 
 一条微指令可定义**多个并行**的基本操作
 
+**特点：**程序行数短，执行效率高，但是编写麻烦不灵活（因为一条指令包含了很多操作，功能复杂）
+
 <div>
   <img src="./408冲刺背诵手册.assets/image-20221023112745977.png" alt="image-20221023112745977" style="width:20%;margin-left:30px;" />
   <img src="./408冲刺背诵手册.assets/image-20221023112905505.png" alt="image-20221023112905505" style="width:60%;" />
@@ -1144,6 +1148,8 @@ $解答：$
 #### 垂直型：
 
 一条微指令只能定义**一种**基本操作
+
+**特点：**程序行数多，执行效率低，但是编写简单且灵活
 
 <div>
   <img src="./408冲刺背诵手册.assets/image-20221023113110556.png" alt="image-20221023113110556" style="width:20%;" />
@@ -2246,6 +2252,10 @@ $带权周转时间=\frac{周转时间}{实际运行时间}$
 
 $平均带权周转时间=带权周转时间的加权平均$
 
+$等待时间：进程被创建后未上机的时间$
+
+$平均等待时间：等待时间的加权平均$
+
 响应时间：从用户**提交请求**到系统**产生响应**所需的时间
 
 > 注意：**<u>进程切换和调度的时间</u>**，表示系统在每次上处理机**<u>运行前</u>**所需要耗费的时间
@@ -2501,6 +2511,44 @@ $但是发生死锁，一定是在不安全状态$
 - 资源剥夺法
 - 进程**回退法**
 
+### PV信号量
+
+#### 整形信号量
+
+```C
+wait(S){
+    while(S<=0);
+    S--;
+}
+signal(S){
+    S++;
+}
+```
+
+
+
+#### 记录型信号量
+
+```c
+wait(semaphore S){
+    S.value--;
+    if (S.value < 0){
+        // 添加进程到S.L 
+        block(S.L); // 自我阻塞（达到让权等待）
+    }
+}
+
+signal(semaphore S){
+    S.value++;
+    if (S.value <= 0){
+        // 从S.L中移除该进程P
+        wakeup(P); // 唤醒该进程
+    }
+}
+```
+
+
+
 ### PV-读写者问题
 
 读写者问题中 ，通常写者直接是互斥访问的，而读者之间是不互斥访问的。想要实现这个核心逻辑就是为读者分配一个count计数器，并利用if判断确保后来的读者跳过P()互斥操作。
@@ -2625,7 +2673,7 @@ Writer(){
 
 
 
-### 哲学家进餐问题
+### PV-哲学家进餐问题
 
 实现精髓在于：
 
@@ -2643,13 +2691,13 @@ Process () {
             V(Lock); // 取走所有资源后解锁
             break;  // 并跳出用于检测资源的while循环
         }
-      V(Lock); // 资源不够，解锁并再循环一次
+      	V(Lock); // 资源不够，解锁并再循环一次
     }
   
   	//....
     // 此处做进程该做的事情（eg.哲学家干饭）
   
-  P(Lock);
+    P(Lock);
     // 所有资源int值增加，一口气归还所有资源
     V(Lock);
 }
@@ -2884,7 +2932,7 @@ Process () {
 
 - 先open后read
 
-- **open(文件名，路径)：return **
+- **open(文件名，路径)：return 文件描述符 **
 
 - **read(文件描述符fd，缓冲区首址buf，读取字节数)**
 
@@ -3777,6 +3825,8 @@ $例题：$
 
 ### VLAN
 
+VLAN被设计的初衷：隔绝广播域（因此一个VLAN就是一个广播域）
+
 **优点：**
 
 - 有效共享网络资源  【易错选：链路聚合】
@@ -4000,6 +4050,8 @@ $例题：$
 
 ### IP地址
 
+#### IPv4
+
 <img src="./408冲刺背诵手册.assets/image-20221013202817586.png" alt="image-20221013202817586" style="width:50%;" />
 
 - **不用作**主机的IP地址
@@ -4063,7 +4115,18 @@ $例题：$
 >
 > **选B**
 
+#### IPv6
 
+**特性：**
+
+- 长度：128B
+- 无校验和
+- “可选字段”->"扩展首部"
+- “总长度”->”有效载荷“
+- ”协议“->”下一首部“
+- 无需DHCP
+- 首部长度单位8B（<u>首4变首8</u>）
+- 仅支持主机处分片（IPv4的路由处不再支持分片）
 
 ### NAT
 
@@ -4405,6 +4468,44 @@ MIME可在现有的电子邮件协议下传送
 ## 附录：计算机网络协议栈
 
 ![NC协议汇总](./408冲刺背诵手册.assets/NC协议汇总.png)
+
+
+
+## 附录：计算机网络常见首部长度及单位
+
+### 以太网帧
+
+- 帧首部+尾部=18B
+- 数据部分=46B-1600B（46B也就相当于是IP分组的最短帧长）
+- 最短帧长=46B+18B=64B（不含前导码）（帧长<64B时进行填充）
+- MAC地址长度6B（直通式交换机最少检查6B）
+
+### IP分组
+
+- 首部固定部分长度：20B
+
+- 最短帧长：46B
+
+- IPv4地址字段长度：4B
+
+- IP分组中不同字段对应的**单位**
+
+  > 总长度：1B
+  >
+  > 片偏移：8B
+  >
+  > 首部长度：4B
+  >
+  > 【1总8片首4】
+
+- IPv6地址长度：16B
+
+### TCP分组
+
+- 首部固定部分长度：20B
+- TCP端口字段：2B
+
+### UDP分组
 
 
 
@@ -4803,6 +4904,14 @@ $例题：$
   - $=0则表示无需添加$
   - $=u则表示需添加k-1-u个虚段$
 
+#### 【补充：在归并排序中的归并树】
+
+在多路归并排序中，归并树实际上就相当于一棵多叉HFM树，因此：
+$$
+\text{归并过程中的磁盘I/O次数}=归并树的WPL*2
+$$
+
+
 #### HFM编码的加权平均长度计算：
 
 $HFM编码加权平均长度=\frac{\sum (频次_i*长度_i)}{\sum 频次_i}$
@@ -4827,12 +4936,16 @@ $HFM编码加权平均长度=\frac{\sum (频次_i*长度_i)}{\sum 频次_i}$
 
 #### Find()时间复杂度
 
-|            | 无优化 | Union优化                                  | 压缩路径                                                   |
-| ---------- | ------ | ------------------------------------------ | ---------------------------------------------------------- |
-| **复杂度** | $O(n)$ | $O(\log_2n)$                               | $O(\alpha(n))$                                             |
-| **原理**   |        | 在合并的时候总是将较矮的树合并到较高的树下 | 查找的时候先找到根，然后再将查找路径上的所有结点都挂到根上 |
+|            | 无优化 | Union优化                                  | Find优化(压缩路径)                                           |
+| ---------- | ------ | ------------------------------------------ | ------------------------------------------------------------ |
+| **复杂度** | $O(n)$ | $O(\log_2n)$                               | $O(\alpha(n))$                                               |
+| **原理**   |        | 在合并的时候总是将较矮的树合并到较高的树下 | 查找的时候先找到根，然后再将查找路径上的所有结点都挂到**根上** |
 
+#### 并查集的应用
 
+- 克鲁斯卡尔算法求**最小生成树**
+- 判断无向图**连通性**
+- 判断无向图**是否有环**
 
 ### BST二叉搜索树
 
@@ -5082,9 +5195,7 @@ $B树又称"多路平衡二叉查找树"$
 
 - **高度为h的m阶B树**
 
-  $最小高度：h≥log_m(n+1)$
-
-  $最大高度：h\le \log_{\lceil m/2 \rceil}(\frac{n+1}{2})+1$
+  $log_m(n+1)\le h\le \log_{\lceil m/2 \rceil}(\frac{n+1}{2})+1$
 
 #### B树查找
 
@@ -5526,6 +5637,32 @@ DFS、拓扑排序、求关键路径
 
 千万注意，ASL分母只和**散列函数可能落到的点**有关，与关键字数量无关！！！！
 
+**线性探测法下ASL的计算：**
+
+$\text{ASL}_{成功}=\frac{每个关键字从原散列值找到实际位置之和}{关键字个数}$
+
+$\text{ASL}_{失败}=\frac{每个余数实际要找到空位置的次数和}{余数数量}$
+
+<div>
+  <img src="./408冲刺背诵手册.assets/image-20231216173434350.png" alt="image-20231216173434350" style="wdith:70;" />
+	<img src="./408冲刺背诵手册.assets/image-20231216173755548.png" alt="image-20231216173755548" style="width:80%;" />
+</div>
+
+
+
+**拉链法处理下ASL的计算：**
+
+$\text{ASL}_{成功}=\frac{每个关键字对应查找次数之和}{关键字个数}$
+
+$\text{ASL}_{失败}=\frac{关键字数量}{表长}=装填因子$
+
+<div>
+  <img src="./408冲刺背诵手册.assets/image-20231216145938250.png" alt="image-20231216145938250" style="width:80%;" />
+  <img src="./408冲刺背诵手册.assets/image-20231216150613932.png" alt="image-20231216150613932" style="width:80%;" />
+</div>
+
+
+
 
 
 ## 排序
@@ -5642,7 +5779,7 @@ DFS、拓扑排序、求关键路径
 > - **时间复杂度** 与 初始状态**无关**：选择、堆、归并、基数
 > - **比较次数** 与 初始状态**无关**：选择、基数
 > - **移动次数** 与 初始状态**无关**：归并、基数
-> - **总趟数** 与 初始状态**有关**：快排、冒泡h
+> - **总趟数** 与 初始状态**有关**：快排、冒泡
 
 
 
@@ -5929,7 +6066,7 @@ bool MidOrder(SqBiTNode *T, int i){ // i表示顺序存储中的数组下标 返
 }
 ```
 
-#### 二叉树的遍历（链式存储存储）
+#### 二叉树的遍历（链式存储）
 
 ```c++
 typedef struct node{
@@ -5944,6 +6081,98 @@ int MidOrder(LindBiTNode *T){  //返回类型自定
     MidOrder(T->rchild);
     return xx;
 }
+```
+
+#### 二叉树的层次遍历（链式存储）
+
+```c
+typedef struct BiTNode{
+    int data;
+    struct BiTNode *lchild,*rchild; 
+}BiTNode,*BiTree;
+
+void LevelOrder(BiTree T) {
+    if (!T) return;
+    Queue Q;
+    BiTree x;
+    InitQueue(Q);
+    EnQueue(Q, T); //根节点入队
+    while (!IsEmpty(Q)) {
+        DeQueue(Q, x);  //取一个节点出队
+        visit(x); //访问该节点
+        if (x->lchild)
+            EnQueue(Q, x->lchild); //左孩子入队
+        if (x->rchild)
+            EnQueue(Q, x->rchild); //右孩子入队
+    }
+}
+```
+
+#### 求树的高度
+
+```c
+int height=0; //用全局变量记录树的高度 
+void PreOrder (BiTree T, int n){ 
+    if (T == NULL) return; 
+    if(n> height) height=n; //更新树的高度 
+    PreOrder (T->lchild, n + 1); //遍历左子树 
+    PreOrder (T->rchild, n + 1); //遍历右子树 
+}
+void run(BiTree T){
+  	int h = ProOrder(T,1);
+  	cout << h;
+}
+```
+
+#### 求树的宽度
+
+```c
+int width[MAX]; //辅助数组，用于记录每一层的宽度
+
+void PreOrder(BiTree T, int level){
+    if(!T) return;
+    width[level]++;
+    PreOrder(T->lchild, level + 1);
+    PreOrder(T->rchild, level + 1);
+}
+
+int ans(BiTree T){
+    for(int i = 0; i < MAX; ++i) width[i] = 0; //初始化数组
+    PreOrder(T, 0);
+    int maxWidth = 0;
+    for(int i = 0; i < MAX; ++i) {  //找出最大宽度即为树的宽度
+        if (maxWidth < width[i]) 
+            maxWidth = width[i];
+    }
+    return maxWidth;
+}
+```
+
+
+
+#### WPL计算
+
+```c++
+//类型定义：
+typedef struct BTNode{
+    int data;
+    struct BTNode *left,*right;
+}BTNode;
+
+//算法如下：
+int WPL=0;                                //WPL是全局变量
+void Preorder(BTree T, int level){             //当前结点p，深度d
+    if (!T)                           //p是空结点
+        return;
+    if (T->left==null && T->right==null)    //p是叶结点
+        WPL+=d*T->data;
+    Preorder(p->left, level+1);                //递归调用左孩子
+    Preorder(p->right, level+1);                //递归调用右孩子
+}
+void ans(BTNode* T){
+    preorder(T, 0);                        //根结点深度为0
+}
+
 ```
 
 
