--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -6083,7 +6083,7 @@ int MidOrder(LindBiTNode *T){  //返回类型自定
 }
 ```
 
-#### 二叉树的层次遍历（链式存储）
+#### 二叉树的层次遍历（不分层）（链式存储）
 
 ```c
 typedef struct BiTNode{
@@ -6107,6 +6107,46 @@ void LevelOrder(BiTree T) {
     }
 }
 ```
+
+#### 二叉树层次遍历（分层）（BFS标准模板）
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    vector<vector<int>> levelOrder(TreeNode* root) {
+        vector<vector<int>> ans;
+        queue<TreeNode*> q;
+        if (!root) return ans;
+        q.push(root);
+        while(!q.empty()){
+            int size = q.size();
+            vector<int> tmp_ans;
+            for (int i = 0; i < size; ++i) {
+                TreeNode* t = q.front();
+                q.pop();
+                tmp_ans.push_back(t->val);
+                if (t->left) q.push(t->left);
+                if (t->right) q.push(t->right);
+            }
+            ans.push_back(tmp_ans);
+        }
+        return ans;
+    }
+};
+```
+
+
 
 #### 求树的高度
 
@@ -6217,6 +6257,41 @@ typedef struct {
 
 
 ## 查找
+#### KMP
+
+```c
+void getNext(int *next, char *t, int lent){
+    int i = 0, j = -1;
+    next[0] = -1;
+    while(i < lent - 1){
+        if (j == -1 || t[i] == t[j]){
+            ++i;
+            ++j;
+            next[i] = j;
+        } else{
+            j = next[j];
+        }
+    }
+}
+
+int kmp(char *s, char *t){
+    int lens = len(s), lent = len(t);
+    int next[lent];
+    getNext(next, t, lent);
+    int i = 0, j = 0;
+    while(i < lens && j < lent){
+        if (j == -1 || s[i] == t[j]){
+            i++;
+            j++;
+        } else j = next[j];
+    }
+    if (j == lent) return i - lent;
+    return -1;
+}
+```
+
+
+
 #### 二分查找
 
 ```c++
