--- a/408冲刺背诵手册.md
+++ b/408冲刺背诵手册.md
@@ -5785,6 +5785,172 @@ $\text{ASL}_{失败}=\frac{关键字数量}{表长}=装填因子$
 
 # DS算法复习
 
+## C内容拓展
+
+### 容器模板
+
+#### 栈
+
+```c
+#include<stdio.h>
+#include<stdlib.h>
+#include<malloc.h>
+
+
+typedef struct node {
+	char val;
+	struct noexcept *next;
+}node;
+
+typedef struct stack {
+	node* top;
+}stack;
+
+stack Initstack() {
+	stack st;
+	st.top = NULL;
+	return st;
+}
+int isEmpty(stack *st) {
+	return st->top == NULL;
+}
+void push(stack *st, char e) {
+	node *n = malloc(sizeof(node));
+	n->val = e;
+	n->next = st->top;
+	st->top = n;
+}
+void pop(stack *st) {
+	if (isEmpty(st)) return;
+	st->top = st->top->next;
+}
+char top(stack *st) {
+	return st->top->val;
+}
+// void look(stack *st){
+// 	node * q = st->top;
+// 	while(q){
+// 		printf("%c ", q->val);
+// 		q = q->next;
+// 	}
+// 	printf("\n");
+// }
+int main() {
+	stack st = Initstack();
+	push(&st,'s');
+	push(&st,'a');
+	pop(&st);
+	push(&st,'b');
+	look(&st);
+	
+	return 0;
+}
+
+```
+
+
+
+### ACM模板
+
+#### 1. 多⾏输⼊，每⾏两个整数
+
+```c
+#include <stdio.h>
+int main(){
+    int a,b;
+    while(scanf("%d %d",&a, &b) != EOF)
+        printf("%d\n",a+b);
+	return 0;
+}
+```
+
+
+
+## C++内容拓展
+
+### ACM模板
+
+#### 1. 多⾏输⼊，每⾏两个整数
+
+```cpp
+#include<iostream> 
+using namespace std; int main() {
+	  int a, b;
+	  while (cin >> a >> b) {
+      // doing...
+    }
+}
+```
+
+#### 2. 多组数据，每组第⼀⾏为n, 之后输⼊n⾏两个整数
+
+如果是单组数据仅需把最外层while去掉即可
+
+```cpp
+#include<iostream>
+using namespace std;
+int main() {
+	int n, a, b;
+	while (cin >> n) {
+		while (n--) {
+			cin >> a >> b;
+			cout << a + b << endl;
+		}
+	}
+
+}
+```
+
+#### 3. 若⼲⾏输⼊，每⾏输⼊两个整数，遇到特定条件终⽌
+
+```cpp
+#include<iostream>
+using namespace std;
+int main() {
+	int a, b;
+	while (cin >> a >> b) {
+		if (终止条件) break;
+		// doing...
+	}
+
+}
+```
+
+#### 4. 若⼲⾏输⼊，特定条件终⽌，每⾏第⼀个数为N，表示本⾏后⾯ 有N个数
+
+```cpp
+#include<iostream>
+using namespace std;
+int main() {
+	int n;
+	while (cin >> n) {
+		if (终止条件) break;
+		while (n--) {
+			// doing...
+		}
+		cout << sum << endl;
+	}
+}
+```
+
+#### 7. 多组测试样例，每组输⼊数据为字符串，字符⽤空格分隔,输出 为⼩数点后两位
+
+```cpp
+#include <iostream>
+using namespace std;
+int main() {
+	string s;
+	while (getline(cin, s)) { // 接受一整行字符串
+		for (int i = 0; i < s.size(); i++) {
+			// 遍历字符串
+		}
+	}
+
+}
+```
+
+
+
 ## 数组类算法
 
 ### 数组常用操作
